# deeplearning.ai

./: .gitignore  .mise.toml  README.md  pyproject.toml
courses/agentic-ai/: README.md  pyproject.toml
courses/agentic-ai/module-01/: README.md  pyproject.toml
courses/agentic-ai/module-02/: README.md  m2_graded_lab_reflection_research_agent.ipynb  pyproject.toml
courses/agentic-ai/module-02/helpers/: utils.py
courses/agentic-ai/module-03/: README.md  m3_graded_lab_tool_use_reflective_agents.ipynb  pyproject.toml  research_tools.py
courses/agentic-ai/module-05/: L3_Agentic_Workflows.ipynb  README.md  pyproject.toml
courses/agentic-ai/module-05/helpers/: research_tools.py  unittests.py
scripts/: setup.sh
shared/common/: pyproject.toml
