[project]
name = "deeplearning-ai-courses"
version = "0.1.0"
description = "Monorepo for DeepLearning.AI courses"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv.workspace]
members = [
    "courses/*",
    "courses/*/module-*",
    "shared/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"